--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: playtone;
+    src: url(../media/PaytoneOne.ttf);
+}
+
 .header {
     height: 50px;
     width: 100%;
