--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,16 @@
 }
 
 .logo {
-    font-family: 'Montserrat', sans-serif
+    font-family: 'playtone', sans-serif;
+    font-size: 60px;
+
+    font-weight: 900;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #30ADBF;
+    color: #EBDFD8;
+
+    text-shadow: 1px 1px 5px rgba(0,0,0,.25);
+    margin-top: -10;
 
 }
 
