--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,8 @@ html {
     color: #EBDFD8;
 
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
-    margin-top: -10px;
+    margin-top: -12px;
+    margin-left: 35px;
 
 }
 
