--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ html {
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
     margin-top: -12px;
     margin-left: 35px;
-
+    line-height: 1.5em;
 }
 
 
