--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
     font-size: 16px;
     line-height: 1.5em;
+    background-color: #FEFDFB;
 }
 
 @font-face {
@@ -39,7 +40,7 @@ html {
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
     margin-top: -12px;
     margin-left: 35px;
-    line-height: 0em;
+    line-height: 1.3em;
 }
 
 
