--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,51 @@ html {
 
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
     margin-top: -12px;
-    margin-left: 35px;
+    margin-left: 4%;
     line-height: 1.3em;
 }
 
+.new-thread-button {
+    padding: 2px 10px;
+    height: 25px;
+    width: auto;
+    font-size: 13px;
+    text-transform: uppercase;
+    float: right;
+    margin: 9px 15px;
+    color: #E9EAED;
+    background: -webkit-linear-gradient(#5085C4, #1D5291);
+    background: -o-linear-gradient(#5085C4, #1D5291);
+    background: -moz-linear-gradient(#5085C4, #1D5291);
+    background: linear-gradient(#5085C4, #1D5291);
+    border-color: #1D5291;
+    -webkit-border-radius: 3px;
+    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+}
+
+.new-thread-button:hover{
+    color: #E9EAED;
+    background: -webkit-linear-gradient(#6A9FDE, #1D5291);
+    background: -o-linear-gradient(#6A9FDE, #1D5291);
+    background: -moz-linear-gradient(#6A9FDE, #1D5291);
+    background: linear-gradient(#6A9FDE, #1D5291);
+    border-color: #1D5291;
+    -webkit-border-radius: 3px;
+    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    font-size: 13px;
+}
+
+.new-thread-button:focus{
+color: #E9EAED;
+background: -webkit-linear-gradient(#5085C4, #1D5291);
+background: -o-linear-gradient(#5085C4, #1D5291);
+background: -moz-linear-gradient(#5085C4, #1D5291);
+background: linear-gradient(#5085C4, #1D5291);
+border-color: #1D5291;
+-webkit-border-radius: 3px;
+-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
 
 
 /*
