--- a/css/main.css
+++ b/css/main.css
@@ -20,13 +20,18 @@ html {
     background: -webkit-linear-gradient(#ACCC08, #98B210);
     background: -o-linear-gradient(#ACCC08, #98B210);
     background: -moz-linear-gradient(#ACCC08, #98B210);
-    background: linear-gradient(#30ADBF, #1693A5);
+    background: linear-gradient(#4AC7D9, #1693A5);
     border-color: #98B210;
     border-radius: 0;
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
 }
+
+/* old liner header background colors
+background: linear-gradient(#30ADBF, #1693A5);
+
+*/
 
 .logo {
     font-family: 'playtone', sans-serif;
@@ -50,39 +55,59 @@ html {
     font-size: 13px;
     text-transform: uppercase;
     float: right;
-    margin: 9px 15px;
-    color: #E9EAED;
-    background: -webkit-linear-gradient(#5085C4, #1D5291);
-    background: -o-linear-gradient(#5085C4, #1D5291);
-    background: -moz-linear-gradient(#5085C4, #1D5291);
-    background: linear-gradient(#5085C4, #1D5291);
-    border-color: #1D5291;
-    -webkit-border-radius: 3px;
+    margin-top: 22px;
+    margin-right: 2%;
+    border-style: solid;
+    border-color: #EBDFD8;
+    color: #EBDFD8;
+    border-width: 2px;
+    border-radius: 8px;
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    text-decoration: none;
+    background: linear-gradient(#30ADBF, #1693A5);
 }
 
 .new-thread-button:hover{
-    color: #E9EAED;
-    background: -webkit-linear-gradient(#6A9FDE, #1D5291);
-    background: -o-linear-gradient(#6A9FDE, #1D5291);
-    background: -moz-linear-gradient(#6A9FDE, #1D5291);
-    background: linear-gradient(#6A9FDE, #1D5291);
-    border-color: #1D5291;
-    -webkit-border-radius: 3px;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    padding: 2px 10px;
+    height: 25px;
+    width: auto;
     font-size: 13px;
+    text-transform: uppercase;
+    float: right;
+    margin-top: 22px;
+    margin-right: 2%;
+    border-style: solid;
+    border-color: #EBDFD8;
+    color: #EBDFD8;
+    border-width: 2px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    text-decoration: none;
+
 }
 
 .new-thread-button:focus{
-color: #E9EAED;
-background: -webkit-linear-gradient(#5085C4, #1D5291);
-background: -o-linear-gradient(#5085C4, #1D5291);
-background: -moz-linear-gradient(#5085C4, #1D5291);
-background: linear-gradient(#5085C4, #1D5291);
-border-color: #1D5291;
--webkit-border-radius: 3px;
--webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    padding: 2px 10px;
+    height: 25px;
+    width: auto;
+    font-size: 13px;
+    text-transform: uppercase;
+    float: right;
+    margin-top: 22px;
+    margin-right: 2%;
+    border-style: solid;
+    border-color: #EBDFD8;
+    color: #EBDFD8;
+    border-width: 2px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    text-decoration: none;
+
+}
+
+.new-thread-image {
+    height: 16px;
+    width: 16px;
 }
 
 
