--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,12 @@
 /* ******************************** */
 /*              Layout              */
 /* ******************************** */
-html {
+html, body {
     font-size: 16px;
     line-height: 1.5em;
     background-color: #FEFDFB;
+    background-color: #E6E6E6;
+    font-family: Montserrat, helvetica, arial, sans-serif;
 }
 
 
@@ -71,13 +73,13 @@ background: linear-gradient(#30ADBF, #1693A5);
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
     background: linear-gradient(#30ADBF, #1693A5);*/
     padding: 4px 14px;
-    border-radius: 6px;
+    border-radius: 5px;
     border: 0;
     color: #30ADBF;
-    background: linear-gradient(#FEFDFB, #EEEDEB);
+    background: #FEFDFB;
 }
 
-.new-thread-button:hover{
+.new-thread-button:hover, .new-thread-button:focus {
     /*padding: 2px 10px;
     height: 25px;
     width: auto;
@@ -93,10 +95,15 @@ background: linear-gradient(#30ADBF, #1693A5);
     border-radius: 8px;
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
     text-decoration: none;*/
-    background: linear-gradient(#EEEDEB, #FEFDFB);
+    background: #E6E6E6;
+
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
 }
 
-.new-thread-button:focus{
+/*.new-thread-button:focus{
     /*padding: 2px 10px;
     height: 25px;
     width: auto;
@@ -111,9 +118,8 @@ background: linear-gradient(#30ADBF, #1693A5);
     border-width: 2px;
     border-radius: 8px;
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
-    text-decoration: none;*/
-    background: linear-gradient(#EEEDEB, #FEFDFB);
-}
+    text-decoration: none;
+}*/
 
 /* *************************************** */
 /*    new thread page styling              */
@@ -142,10 +148,31 @@ h1.subtitle {
 
 
 /* ******************************************* */
+/*              Threads - General              */
+/* ******************************************* */
+.threads_header {
+    background: #30ADBF;
+    padding: 10px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    color: white;
+    font-size: 1.5em;
+}
+
+
+/* **************************************** */
+/*              Static Threads              */
+/* **************************************** */
+
+
+
+/* ******************************************* */
 /*              Generated Threads              */
 /* ******************************************* */
 .thread {
     border-bottom: 1px solid #1693A5;
+    padding: 10px;
+    background: white;
 }
 .score {
     text-algn: center;
