--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ html {
     font-size: 16px;
     line-height: 1.5em;
     background-color: #FEFDFB;
-    font-color: #333333;
 }
 
 
@@ -128,14 +127,44 @@ background: linear-gradient(#30ADBF, #1693A5);
 .new-thread-form {
     padding-left: 20px;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 30px;
     padding-right: 20px;
 }
 h1.subtitle {
     font-family: 'montserrat';
-    font-size: 22px;
+    font-weight: 100;
+    font-size: 18px;
+}
+.new-thread-page-title {
+    font-family: 'montserrat';
+    font-size: 30px;
+    color: #333333;
+    font-weight: 900;
+    padding-top: 50px;
 }
 
+.new-thread-title-field {
+    font-size: 18px;
+    padding: 8px 10px;
+    -webkit-border-radius: 5px;
+    border: 1px solid #1693A5;
+    background-color: #e9eaed;
+    width: 466px;
+}
+
+.new-thread-create-button{
+    float: left;
+    margin-bottom: 20px;
+    font-family: 'montserrat';
+}
+
+.new-thread-text-area{
+    font-size: 16px;
+    padding: 8px 10px;
+    -webkit-border-radius: 5px;
+    border: 1px solid #1693A5;
+    background-color: #e9eaed;
+}
 .new-thread-image {
     height: 16px;
     width: 16px;
