--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,7 @@
 html, body {
     font-size: 16px;
     line-height: 1.5em;
-    background-color: #FEFDFB;
-    background-color: #E6E6E6;
-    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
-    background: -o-linear-gradient(#4AC7D9, #1693A5);
-    background: -moz-linear-gradient(#4AC7D9, #1693A5);
-    background: linear-gradient(#4AC7D9, #1693A5);
+    background-color: #fefccb;
     font-family: Montserrat, helvetica, arial, sans-serif;
 }
 
