--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html, body {
     line-height: 1.5em;
     background-color: #fefccb;
     font-family: Montserrat, helvetica, arial, sans-serif;
-    background-image: url('http://i.imgur.com/vuTuAFd.png');
+    background-image: url('../images/toastbkg.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position-x: 95%;
