--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ background: linear-gradient(#30ADBF, #1693A5);
 
 .logo {
     font-family: 'playtone', sans-serif;
-    font-size: 60px;
+    font-size: 75px;
 
     font-weight: 900;
     -webkit-text-stroke-width: 1px;
@@ -59,7 +59,7 @@ background: linear-gradient(#30ADBF, #1693A5);
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
     margin-top: -12px;
     margin-left: 4%;
-    line-height: 1.3em;
+    line-height: .95em;
     text-transform: none;
     text-decoration: none;
 }
