--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@ background: linear-gradient(#30ADBF, #1693A5);
     font-size: 75px;
 
     font-weight: 900;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #30ADBF;
+    /*-webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #30ADBF;*/
     color: #fefccb;
 
     /* ****** old logo color #EBDFD8 ***** */
@@ -166,8 +166,8 @@ h1.subtitle {
     font-weight: 900;
     padding-top: 50px;
     padding-left: 20px;
-    /*-webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #333333;*/
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #333333;
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
 }
 
