--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,9 @@ background: linear-gradient(#30ADBF, #1693A5);
     font-size: 75px;
 
     font-weight: 900;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 0px;
     -webkit-text-stroke-color: #30ADBF;
-    color: #fefccb;
+    color: #ffffff;
 
     /* ****** old logo color #EBDFD8 ***** */
 
