--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ a {
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
+    text-align: center;
 }
 
 /* old liner header background colors
