--- a/css/main.css
+++ b/css/main.css
@@ -215,6 +215,16 @@ h1.subtitle {
     width: 16px;
 }
 
+
+/* ******************************************* */
+/*              Home Index Page Styling        */
+/* ******************************************* */
+
+.global-padding {
+    height: 30px;
+    width: 100%;
+}
+
 /* ******************************************* */
 /*              Threads - General              */
 /* ******************************************* */
