--- a/css/main.css
+++ b/css/main.css
@@ -156,12 +156,10 @@ background: linear-gradient(#30ADBF, #1693A5);
     padding-right: 20px;
 }
 h1.subtitle {
-    font-family: 'montserrat';
     font-weight: 100;
     font-size: 18px;
 }
 .new-thread-page-title {
-    font-family: 'montserrat';
     font-size: 30px;
     color: #333333;
     font-weight: 900;
@@ -178,7 +176,6 @@ h1.subtitle {
     -webkit-border-radius: 5px;
     border: 1px solid #1693A5;
     background-color: #e9eaed;
-    width: 466px;
     width: 100%;
     text-shadow: 1px 1px 5px rgba(0,0,0,.25);
 }
@@ -186,10 +183,7 @@ h1.subtitle {
 .new-thread-create-button{
     float: left;
     margin-bottom: 20px;
-    font-family: 'montserrat';
-    border-width: 2px;
-    border-color: #30ADBF;
-    border-style: solid;
+    border: 2px solid #30ADBF;
     font-size: 14px;
 }
 .radius-selector{
@@ -227,7 +221,7 @@ h1.subtitle {
 
 .fiftypadding {
     height: 50px;
-    width" 100%;
+    width: 100%;
 }
 
 .staticfeed {
@@ -330,7 +324,6 @@ h1.subtitle {
 }
 .single_thread .location {
     display: inline-block;
-    font-style: oblique;
     font-style: italic;
 }
 .single_thread .score {
@@ -394,7 +387,6 @@ h1.subtitle {
 .view_thread .location {
     display: inline-block;
     font-size: .8em;
-    font-style: oblique;
     font-style: italic;
     margin-left: 5px;
     color: #777;
