--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,8 @@
 html, body {
     font-size: 16px;
     line-height: 1.5em;
-    background-color: #fefccb;
     font-family: Montserrat, helvetica, arial, sans-serif;
-    background-image: url('../images/toastbkg.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: #fefccb url('../images/toastbkg.png') no-repeat fixed;
     background-position-x: 98%;
     background-position-y: 95%;
     background-size: 100px;
@@ -150,10 +147,7 @@ background: linear-gradient(#30ADBF, #1693A5);
 }
 
 .new-thread-form {
-    padding-left: 20px;
-    padding-bottom: 20px;
-    padding-top: 30px;
-    padding-right: 20px;
+    padding: 30px 20px 20px;
 }
 h1.subtitle {
     font-weight: 100;
