--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,9 @@ h1.subtitle {
     background: -moz-linear-gradient(#4AC7D9, #1693A5);
     background: linear-gradient(#4AC7D9, #1693A5);
     -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    font-weight: 900;
+    padding-left: 20px;
+    text-align: center;
 }
 
 
