--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,20 @@ h1.subtitle {
     border-top-left-radius: 5px;
     color: white;
     font-size: 1.5em;
+    background: #30ADBF;
+    padding: 10px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    color: white;
+    font-size: 1.1em;
+    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
+    background: -o-linear-gradient(#4AC7D9, #1693A5);
+    background: -moz-linear-gradient(#4AC7D9, #1693A5);
+    background: linear-gradient(#4AC7D9, #1693A5);
+    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    font-weight: 900;
+    padding-left: 20px;
+    text-align: center;
 }
 .threads_load_more {
     background: #eee;
@@ -328,7 +342,7 @@ h1.subtitle {
 }
     .single_thread .description.img_present { padding-left: 90px; }
 .single_thread .title {
-    font-size: 1.4em;
+    font-size: medium;
     margin: 5px 0;
     display: inline-block;
     font-weight: bold;
