--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ h1.subtitle {
 }
     .single_thread .description.img_present { padding-left: 90px; }
 .single_thread .title {
-    font-size: medium;
+    font-size: large;
     margin: 5px 0;
     display: inline-block;
     font-weight: bold;
@@ -413,8 +413,7 @@ h1.subtitle {
 }
 
 span.column11.text {
-    font-size: x-small;
-    line-height: 1em;
+    font-size: medium;
 }
 
 .profile-table {
