--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ a {
 }
 
 .header {
-    height: 63px;
+    height: 62px;
     width: 100%;
     background: -webkit-linear-gradient(#4AC7D9, #1693A5);
     background: -o-linear-gradient(#4AC7D9, #1693A5);
@@ -436,6 +436,7 @@ span.column11.text {
 }
 .thread_view_image + .thread_view_content {
     margin-left: -5px;
+    margin-top: 100px;
 }
 
 .thread_view_image .image {
@@ -461,7 +462,7 @@ span.column11.text {
     color: #777;
 }
 .view_thread .text {
-    margin-bottom: 10px;
+    margin-bottom: 1px;
 }
 .view_score {
     float: right;
