--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,7 @@ span.column11.text {
     border-left: 1px;
     border-style: solid;
     border-color: rgb(52, 177, 195);
-    padding-top: 8px;
+    margin-top: 8px;
 }
 .single_post .votes {
     width: 25px;
