--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,9 @@ background: linear-gradient(#30ADBF, #1693A5);
 /* *************************************** */
 /*    new thread page styling              */
 /* *************************************** */
-
+#new_thread {
+    margin-top: 84px;
+}
 .new-thread-box {
     display: inline-block;
 }
