--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,7 @@ h1.subtitle {
     background-repeat: no-repeat;
 }
 .score_num {
-    margin: 0 10px;
+    margin: 0;
     line-height: 20px;
 }
 .score_toasts {
