--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,31 @@ h1.subtitle {
     text-align: center;
 }
 
+.profile-panel-button{
+    width: 90%;
+    margin-left: 5%;
+}
 
+.fake-login-button{
+
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 0px;
+}
+
+.fake-login-text-field{
+    font-size: 18px;
+    /* padding: 8px 10px; */
+    -webkit-border-radius: 5px;
+    border: 1px solid #1693A5;
+    background-color: #e9eaed;
+    width: 80%;
+    margin-left: 9.5%;
+    text-shadow: 1px 1px 5px rgba(0,0,0,.25);
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-top: 8px;
+}
 
 /* ******************************************* */
 /*              Threads - General              */
