--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,58 @@ html, body {
 a {
     text-decoration: none;
 }
+.left { float: left; }
+.right { float: right; }
+.button {
+    font-size: 13px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 4px 14px;
+    border-radius: 5px;
+    color: #30ADBF;
+    background: #FEFDFB;
+
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.button:hover, .button:focus {
+    background: #E6E6E6;
+
+
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+.button, .button:hover, .button:focus {
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.input_wrapper {
+    overflow: hidden;
+    width: 100%;
+    margin-bottom: 10px;
+}
+.input_wrapper label { width: 100%; }
+input[type="text"]{
+    width: 100%;
+    font-size: 18px;
+    -webkit-border-radius: 5px;
+    border: 1px solid #1693A5;
+    padding: 4px 8px;
+    box-shadow: inset 0px 1px 3px rgba(0,0,0,0.05), 0px 0px 2px rgba(240, 240, 240 ,0.6);
+
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 
 /* ******************************** */
 /*              Header              */
@@ -34,21 +86,17 @@ a {
 .header {
     height: 62px;
     width: 100%;
-    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
-    background: -o-linear-gradient(#4AC7D9, #1693A5);
-    background: -moz-linear-gradient(#4AC7D9, #1693A5);
-    background: linear-gradient(#4AC7D9, #1693A5);
+    background: -webkit-linear-gradient(#3AB7C9, #1693A5);
+    background: -o-linear-gradient(#3AB7C9, #1693A5);
+    background: -moz-linear-gradient(#3AB7C9, #1693A5);
+    background: linear-gradient(#3AB7C9, #1693A5);
     border-color: #98B210;
     border-radius: 0;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.25);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     text-align: center;
 }
-
-/* old liner header background colors
-background: linear-gradient(#30ADBF, #1693A5);
-*/
 
 .logo {
     font-family: 'playtone', sans-serif;
@@ -63,84 +111,7 @@ background: linear-gradient(#30ADBF, #1693A5);
     display: inline-block;
 }
 
-.new-thread-button {
-    font-size: 13px;
-    text-transform: uppercase;
-    text-decoration: none;
-    float: right;
-    margin-right: 2%;
-    margin-top: 20px;
-    /*padding: 2px 10px;
-    height: 25px;
-    width: auto;
-    border-style: solid;
-    border-color: #EBDFD8;
-    color: #EBDFD8;
-    border-width: 2px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
-    background: linear-gradient(#30ADBF, #1693A5);*/
-    padding: 4px 14px;
-    border-radius: 5px;
-    border: 0;
-    color: #30ADBF;
-    background: #FEFDFB;
 
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-
-.new-thread-button:hover, .new-thread-button:focus {
-    /*padding: 2px 10px;
-    height: 25px;
-    width: auto;
-    font-size: 13px;
-    text-transform: uppercase;
-    float: right;
-    margin-top: 22px;
-    margin-right: 2%;
-    border-style: solid;
-    border-color: #EBDFD8;
-    color: #EBDFD8;
-    border-width: 2px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
-    text-decoration: none;*/
-    background: #E6E6E6;
-
-
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-.new-thread-button, .new-thread-button:hover, .new-thread-button:focus {
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-
-/* .new-thread-button:focus{
-    padding: 2px 10px;
-    height: 25px;
-    width: auto;
-    font-size: 13px;
-    text-transform: uppercase;
-    float: right;
-    margin-top: 22px;
-    margin-right: 2%;
-    border-style: solid;
-    border-color: #EBDFD8;
-    color: #EBDFD8;
-    border-width: 2px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
-    text-decoration: none;
-    background: linear-gradient(#EEEDEB, #FEFDFB);
-}*/
 
 /* *************************************** */
 /*    new thread page styling              */
@@ -224,10 +195,9 @@ h1.subtitle {
     top: 0;
     left: 0;
 }
-.profilepane {
-    height-min: 100px;
+.profile_content {
+    overflow: hidden;
     background-color: white;
-    min-height: 450px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
@@ -239,41 +209,27 @@ h1.subtitle {
     border-top-left-radius: 5px;
     color: white;
     font-size: 1.1em;
-    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
-    background: -o-linear-gradient(#4AC7D9, #1693A5);
-    background: -moz-linear-gradient(#4AC7D9, #1693A5);
-    background: linear-gradient(#4AC7D9, #1693A5);
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    background: -webkit-linear-gradient(#3AB7C9, #1693A5);
+    background: -o-linear-gradient(#3AB7C9, #1693A5);
+    background: -moz-linear-gradient(#3AB7C9, #1693A5);
+    background: linear-gradient(#3AB7C9, #1693A5);
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.25);
     font-weight: 900;
-    padding-left: 20px;
     text-align: center;
 }
-
 .profile-panel-button{
     width: 90%;
     margin-left: 5%;
 }
-
-.fake-login-button{
-
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 0px;
+.fake-login {
+    padding: 20px;
+}
+.fake-login .button{
+    color: #1693A5;
+    background: #e9eaed;
+    border: 1px solid #E6E6E6;
 }
 
-.fake-login-text-field{
-    font-size: 18px;
-    /* padding: 8px 10px; */
-    -webkit-border-radius: 5px;
-    border: 1px solid #1693A5;
-    background-color: #e9eaed;
-    width: 80%;
-    margin-left: 9.5%;
-    text-shadow: 1px 1px 5px rgba(0,0,0,.25);
-    padding-top: 4px;
-    padding-bottom: 4px;
-    margin-top: 8px;
-}
 
 /* ******************************************* */
 /*              Threads - General              */
@@ -291,11 +247,11 @@ h1.subtitle {
     border-top-left-radius: 5px;
     color: white;
     font-size: 1.1em;
-    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
-    background: -o-linear-gradient(#4AC7D9, #1693A5);
-    background: -moz-linear-gradient(#4AC7D9, #1693A5);
-    background: linear-gradient(#4AC7D9, #1693A5);
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    background: -webkit-linear-gradient(#3AB7C9, #1693A5);
+    background: -o-linear-gradient(#3AB7C9, #1693A5);
+    background: -moz-linear-gradient(#3AB7C9, #1693A5);
+    background: linear-gradient(#3AB7C9, #1693A5);
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.25);
     font-weight: 900;
     padding-left: 20px;
     text-align: center;
@@ -316,13 +272,13 @@ h1.subtitle {
 .footer.footer {
     height: 22px;
     width: 100%;
-    background: -webkit-linear-gradient(#4AC7D9, #1693A5);
-    background: -o-linear-gradient(#4AC7D9, #1693A5);
-    background: -moz-linear-gradient(#4AC7D9, #1693A5);
-    background: linear-gradient(#4AC7D9, #1693A5);
+    background: -webkit-linear-gradient(#3AB7C9, #1693A5);
+    background: -o-linear-gradient(#3AB7C9, #1693A5);
+    background: -moz-linear-gradient(#3AB7C9, #1693A5);
+    background: linear-gradient(#3AB7C9, #1693A5);
     /* border-color: #98B210; */
     border-radius: 0;
-    -webkit-box-shadow: 0 3px 8px rgba(0,0,0,.25);
+    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.25);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     text-align: center;
