--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,23 @@ h1.subtitle {
     text-align: center;
 }
 
+.new-thread-button {
+    font-size: 13px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 4px 14px;
+    border-radius: 5px;
+    color: #1693A5;
+    background: #e9eaed;
+    border: 1px solid #E6E6E6;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    display: block;
+    margin: 15px;
+}
+
 /* **************************************** */
 /*              Static Threads              */
 /* **************************************** */
