--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ h1.subtitle {
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease;
     display: block;
-    margin: 15px;
+    text-align: center;
 }
 
 /* **************************************** */
